<resources>
    <string name="app_name">Atlan Team Task</string>

    <string name="title_cards">Cards</string>
    <string name="title_my_contacts">My Contacts</string>

    <!--Card List Item Resources-->

    <string name="label_ip">IP address:</string>
    <string name="label_address">Headers</string>
    <string name="label_accept_language">Accept-Language:</string>
    <string name="label_host">Host:</string>
    <string name="label_user_agent">User-Agent:</string>
    <string name="label_accept">Accept:</string>
    <string name="label_date_time">Date and Time</string>
    <string name="label_time">Time:</string>
    <string name="label_milliseconds">Milliseconds since epoch:</string>
    <string name="label_date">Date:</string>
    <string name="label_echo_json">Echo JSON</string>
    <string name="hint_echo_json">key1 value1 key2 value2</string>
    <string name="label_submit">Submit</string>
    <string name="validation">Validation</string>
    <string name="hint_validation">{key1:value1, key2:value2}</string>
    <string name="warning_empty_edit_text">Enter some text</string>
    <string name="title_positive_button">OK</string>

    <!--Contact List Item Resources-->
    <string name="label_first_name">First Name:</string>
    <string name="label_last_name">Last Name:</string>
    <string name="label_phone_number">Phone Number:</string>
</resources>
