<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/card_item_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <!--IP address section-->

            <TextView
                android:id="@+id/ip_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_ip"/>

            <TextView
                android:id="@+id/ip_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ip_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="255.255.255.255"/>

            <View
                android:id="@+id/ip_divider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ip_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/darker_gray"/>

            <!--Headers Section-->

            <TextView
                android:id="@+id/headers_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ip_divider"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/label_address"/>

            <TextView
                android:id="@+id/accept_language_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headers_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_accept_language"/>

            <TextView
                android:id="@+id/accept_language_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/accept_language_label_text_view"
                app:layout_constraintStart_toEndOf="@id/accept_language_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="ru-RU"/>

            <TextView
                android:id="@+id/host_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/accept_language_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_host"/>

            <TextView
                android:id="@+id/host_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/host_label_text_view"
                app:layout_constraintStart_toEndOf="@id/host_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="ru-RU"/>

            <TextView
                android:id="@+id/user_agent_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/host_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_user_agent"/>

            <TextView
                android:id="@+id/user_agent_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/user_agent_label_text_view"
                app:layout_constraintStart_toEndOf="@id/user_agent_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Google Chrome"/>

            <TextView
                android:id="@+id/accept_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/user_agent_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_accept"/>

            <TextView
                android:id="@+id/accept_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/accept_label_text_view"
                app:layout_constraintStart_toEndOf="@id/accept_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="*/*"/>

            <View
                android:id="@+id/headers_divider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accept_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/darker_gray"/>

            <!--Date and Time Section-->

            <TextView
                android:id="@+id/date_and_time_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headers_divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/label_date_time"/>

            <TextView
                android:id="@+id/time_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/date_and_time_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_time"/>

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/time_label_text_view"
                app:layout_constraintStart_toEndOf="@id/time_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="11:08:43 AM"/>

            <TextView
                android:id="@+id/milliseconds_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/time_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_milliseconds"/>

            <TextView
                android:id="@+id/milliseconds_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/milliseconds_label_text_view"
                app:layout_constraintStart_toEndOf="@id/milliseconds_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="12371683718713"/>

            <TextView
                android:id="@+id/date_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/milliseconds_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_date"/>

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/date_label_text_view"
                app:layout_constraintStart_toEndOf="@id/date_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="21-09-1999"/>

            <View
                android:id="@+id/date_time_divider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/darker_gray"/>

            <!--Echo JSON Section-->

            <TextView
                android:id="@+id/label_echo_json"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_echo_json"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_time_divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_small"/>

            <EditText
                android:id="@+id/echo_json_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_echo_json"
                app:layout_constraintStart_toStartOf="parent"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:hint="@string/hint_echo_json"/>

            <Button
                android:id="@+id/submit_echo_json_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/echo_json_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_submit"/>

            <View
                android:id="@+id/echo_json_divider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_echo_json_button"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/darker_gray"/>

            <!--JSON Validation Section-->

            <TextView
                android:id="@+id/validation_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/echo_json_divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/validation"/>

            <EditText
                android:id="@+id/validation_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/validation_label_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:hint="@string/hint_validation"/>

            <Button
                android:id="@+id/submit_validation_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/validation_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_submit"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>