<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/contact_item_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/first_name_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_first_name"/>

            <TextView
                android:id="@+id/first_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_toEndOf="@id/first_name_label_text_view"
                tools:text="Renat"/>

            <TextView
                android:id="@+id/last_name_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_label_text_view"
                android:text="@string/label_last_name"/>

            <TextView
                android:id="@+id/last_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_label_text_view"
                android:layout_toEndOf="@id/last_name_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="Kaitmazov"/>

            <TextView
                android:id="@+id/phone_number_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_label_text_view"
                android:text="@string/label_phone_number"/>

            <TextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_label_text_view"
                android:layout_toEndOf="@id/phone_number_label_text_view"
                android:layout_marginStart="@dimen/margin_small"
                tools:text="+7 (999) 000-00-00"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>